fix/frontend54 * custom scrollbar mixin

--- a/frontend/src/assets/css/scaffolding.scss
+++ b/frontend/src/assets/css/scaffolding.scss
@@ -31,6 +31,7 @@ $primary-text-color: #181a20;
 $text-gray-color: #6a726d;
 $white-text-color: #ffffff;
 $brand-green-color: #06c149;
+$brand-green-color-hover: #03a03a;
 $brand-yellow-color: #f6c648;
 $support-info-color: #03d8ff;
 $supprot-error-color: #f76519;
@@ -52,31 +53,9 @@ $supprot-error-color: #f76519;
   --supprot-error-color: #f76519;
 }
 
-// custom scrollbar
 html {
-  @include scrollbar-color($brand-green-color, $green-100-header-menu-background);
-
-  scrollbar-width: thin;
+  @include custom-scrollbar;
 }
-
-::-webkit-scrollbar {
-  width: 8px;
-}
-
-::-webkit-scrollbar-track {
-  @include scrollbar-shadow($text-gray-color);
-}
-
-::-webkit-scrollbar-thumb {
-  @include scrollbar-shadow($text-gray-color);
-  @include scrollbar-background($brand-green-color);
-}
-
-::-webkit-scrollbar-thumb:window-inactive {
-  @include scrollbar-background($text-gray-color);
-}
-
-// custom scrollbar end
 
 body {
   display: flex;
